Fix URL and alignment

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -41,7 +41,7 @@ h1, h2, h3, h4, h5, h6 {
 .content {
     color: var(--content-color);
     font-size: 17px;
-    text-align: justify;
+    text-align: left;
 }
 
 .content p {
